Add pg deps, remove gpg deps

--- a/t/docker/Dockerfile
+++ b/t/docker/Dockerfile
@@ -2,10 +2,10 @@ FROM perl:5.24
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     build-essential \
-    gnupg1 \
     graphviz \
     libgd-dev \
     libmariadbclient-dev \
+    libpq-dev \
     postfix \
  && rm -rf /var/lib/apt/lists/*
 
@@ -14,7 +14,7 @@ WORKDIR /opt/rt4
 COPY t/docker/perl t/docker/carton           bin/
 COPY etc/cpanfile t/docker/cpanfile.snapshot ./
 
-RUN /opt/rt4/bin/carton install --deployment --without pg,oracle,modperl1,fastcgi
+RUN /opt/rt4/bin/carton install --deployment --without oracle,modperl1,fastcgi,gpg
 
 RUN groupadd -r rt && useradd -r -g rt rt
 
@@ -23,7 +23,8 @@ COPY .                                      build/
 RUN cd build && \
     PERL=/opt/rt4/bin/perl ./configure.ac --with-web-user=rt --with-web-group=rt \
                                           --with-web-handler=standalone \
-                                          --with-db-type=SQLite && \
+                                          --with-db-type=SQLite \
+                                          --disable-gpg && \
     make testdeps install
 
 CMD ["/opt/rt4/bin/rt-server"]
